--- a/CoreGridFSP/CoreGridFSP.csproj
+++ b/CoreGridFSP/CoreGridFSP.csproj
@@ -10,8 +10,24 @@
     <PackageTags>core MVC table grid sortable header sorting pagination page</PackageTags>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>CoreGridFSP.snk</AssemblyOriginatorKeyFile>
-    <Version>1.0.3</Version>
+    <Version>1.0.0</Version>
+    <RepositoryUrl>https://github.com/bmittenzwey/CoreGridFSP</RepositoryUrl>
+    <RepositoryType>GitHub</RepositoryType>
+    <PackageIcon>CoreGridFSP.png</PackageIcon>
+    <PackageIconUrl />
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Resources\CoreGridFSP.png" />
+    <None Include="Resources\CoreGridFSP.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\CoreGridFSP.png" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
