Updated readme to point examples at githup so they will work on nuget updated release notes and switched to release mode

--- a/CoreGridFSP/CoreGridFSP.csproj
+++ b/CoreGridFSP/CoreGridFSP.csproj
@@ -15,6 +15,10 @@
     <RepositoryType>GitHub</RepositoryType>
     <PackageIcon>CoreGridFSP.png</PackageIcon>
     <PackageIconUrl>https://github.com/bmittenzwey/CoreGridFSP/blob/master/CoreGridFSP/Resources/CoreGridFSP.png</PackageIconUrl>
+    <PackageReleaseNotes>Simplified filter handling - Not required to be on the view model
+Simplified the range filters - No more asp-for-end tag. Added suffixes
+Added examples and docs
+Fixed a few bugs</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
